# lcpv

./: .gitignore  CITATION.cff  Dockerfile  LICENSE  README.md  requirements.txt  run.py  run_config.toml  setup.cfg  setup.py
.github/workflows/: build-and-test.yml  docker-image.yml
benchmarks/: benchmark.py  benchmark_filters.py
data/: video.h264
examples/: process_frames.py  process_video.py  raspberry_cameraHQ.py  run_from_terminal.py
examples/process_video/: main.py
examples/utils/: args_parser.py
lcpv/: LCPV.py  __init__.py  camera.py  config.py  edge_process.py  edge_processor.py  lcpv.py  lcpv.py~  lens_correction.py  particle_velocimetry.py  particle_velocimetry.py~  video_processor.py
lcpv/capture/: camera.py
lcpv/lcpv.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
lcpv/particle_velocimetry/: particle_velocimetry.py
lcpv/preprocessing/: __init__.py  lens_correction.py
lcpv/unsharp_masking/: filters.py
lcpv/utils/: base.py  lcpv_template.py
src/camera_calibration/: parameters.json
src/lcpv/: camera.py  edge_process.py  filters.py  lcpv.py  lens_corrector.py
src/lcpv/calibration/: calibrate_from_chessboard.py  parameters.json
src/lcpv/capture/: camera.py
src/lcpv/utils/: lcpv_template.py
src_old/lcpv/: lcpv.py  lens_corrector.py
tests/: test_distortion.py  test_filters.py  test_image_correction.py  test_performance.py  tests.py
