[metadata]
name = lcpv
description = A Low Cost Particle Velocimeter
url = https://github.com/valcarce01/lcpv
keywords = raspberry, openpiv
version = 0.1.0
author = Diego Valcarce, Juan Ramón Rabuñal, Juan Naves García-Rendueles, José Anta, Sonia Seijo
author_email = d.valcarce@udc.es
license = MIT
license_files = LICENSE

[options]
python_requires = >=3.6
package_dir =
    = src
packages = find:
install_requires =
    numpy>=1.22.3
    openpiv>=0.23.8
    opencv-python>=4.5.5.64

[options.extras_require]
raspberry_camera = picamera

[options.packages.find]
where = src
exclude = src.lcpv.utils