[metadata]
name = lcpv
description = A Low Cost Particle Velocimeter
long_description = file: README.md
url = https://github.com/valcarce01/lcpv
keywords = raspberry, openpiv
version = 0.1.0
author = Diego Valcarce, Juan Ramón Rabuñal, Juan Naves García-Rendueles, José Anta, Sonia Seijo
author_email = d.valcarce@udc.es
license = MIT
license_files = LICENSE

[options]
packages = lcpv
install_requires =
    opencv-python
    numpy
    openpiv

[options.extras_require]
raspberry_camera = picamera

;[tool:pytest]
;minversion = 6.0
;adopts = -ra -q
;testpaths =
;    tests
